Fixed overflow formatting issues on forum reply box

--- a/app/assets/stylesheets/application/alonetone.css.scss
+++ b/app/assets/stylesheets/application/alonetone.css.scss
@@ -596,6 +596,7 @@ overflow: hidden;
 // static content
 
 .static_content {
+  overflow: hidden;
   padding: 15px 25px;
   background: #e1e2e1;
   line-height: 18px;
