--- a/app/assets/stylesheets/application/forums.css.scss
+++ b/app/assets/stylesheets/application/forums.css.scss
@@ -482,7 +482,7 @@ a#formatting_help_link {
   font-size: 11px;
   font-weight: normal;
   display: block;
-  margin-top: -20px;
+  // margin-top: -20px;
 }
 
 table#formatting_help {
